# Stickify_uz

./: .env  .flake8  .gitignore  Dockerfile  Makefile  TODO  db.sqlite3  docker-compose.yaml  manage.py  nginx.conf  pyproject.toml  requirements.txt  test.py
apps/: admin.py  forms.py  middleware.py  models.py  serializers.py  urls.py  utils.py  views.py
apps/management/commands/: deactivate_expired_users.py
apps/migrations/: 0001_initial.py  0002_alter_category_name_alter_category_unique_together.py
root/: settings.py  urls.py
templates/app/: category_dashboard.html  category_products.html  landing_page.html  login.html  product-update.html  product_form.html  sticker_generator.html  subscription_expired.html
